--- a/public/holiday.html
+++ b/public/holiday.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>同舟网,风雨同舟,节目快乐</title>
+  <title>同舟网,风雨同舟,节日快乐</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,7 +19,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>2012 同舟网,风雨同舟,节目快乐</h1>
+    <h1>2012 同舟网,风雨同舟,节日快乐</h1>
     <p>平台暂时停服休整中,节后开放.</p>
     <p>感谢您在一年中对我们的大力支持,今后我们会更加努力的为您服务,祝您节日快乐</p>
     <p>2012,我们会做得更好!</p>
